fix: fix spacing issue on information panel

--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ body {
 .container{
     max-width: auto;
     margin: 0 auto;
-    padding: 0 100px; /* top and bottom 0, left and right 30px */
+    padding: 0 200px; /* top and bottom 0, left and right 30px */
 }
 
 /* *** NAVBAR *** */
@@ -66,7 +66,7 @@ body {
     align-items: center;
     background-color: #1F2937;
     color: #F9FAF8;
-    padding: 60px 100px;
+    padding: 60px 200px;
 }
 
 .header h1 { 
@@ -116,7 +116,7 @@ body {
 .information-panel .container {
     display: flex;
     flex-direction: column;
-    padding: 60px 120px;
+    padding: 60px 200px;
 }
 
 .information-panel .information-heading {
@@ -130,25 +130,28 @@ body {
 .information-panel .information-images {
     display: flex;
     flex-direction: row;
+    justify-content: space-evenly;
+    gap: 100px;
 }
 
 .box {
     display: flex;
     flex-direction: column;
-    padding: 0 95px
+    width: 200px;
+    /* padding: 0 95px */
 }
 
-.box:first-child {
+/* .box:first-child {
     padding-left: 0;
 }
 
 .box:last-child {
     padding-right: 0;
-}
+} */
 
 .information-panel img {
     height: auto;
-    width: 150px;
+    max-width: 200px;
     border-radius: 5%;
     border: 2px solid #3882F6;
 }
